--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon"  type="image/svg+xml" href="./src/assets/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Light & Shadow</title>
+    <title>Green Host</title>
   </head>
   <body className="dark">
     <div id="root"></div>
